--- a/app/package.json
+++ b/app/package.json
@@ -22,6 +22,7 @@
     "lucide-react": "^0.279.0",
     "mongodb": "^6.1.0",
     "next": "13.5.2",
+    "next-auth": "^4.23.1",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
